# rocket

./: Cargo.toml
migrations/: 20250801041130_create_users.sql
src/: main.rs
